--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ __pycache__
 cover
 .DS_Store
 .eggs
-.env
+#.env
 .envrc
 .idea
 .mypy_cache
@@ -46,13 +46,13 @@ apache_superset.egg-info/
 changelog.sh
 dist
 dump.rdb
-env
-venv*
-env_py3
-envpy3
-env36
-local_config.py
-/superset_config.py
+#env
+# venv*
+# env_py3
+# envpy3
+# env36
+# local_config.py
+# /superset_config.py
 /superset_text.yml
 superset.egg-info/
 superset/bin/supersetc
